--- a/templates/rofEditor.html
+++ b/templates/rofEditor.html
@@ -6,7 +6,7 @@
 		<label id="ROFBG2" style="display:none" class="ROFeditorBGButton" onclick="BG2()">BG2</label>
 		<label id="ROFBG3" style="display:none" class="ROFeditorBGButton" onclick="BG3()">BG3</label>
 		</div>
-				<li id="ROFPrevCard" class="chat-message message flexcol " style="margin-left: 20%;margin-right: 20%;">
+				<li id="ROFPrevCard" class="chat-message message flexcol roll-of-fate" style="margin-left: 20%;margin-right: 20%;">
 				<header class="message-header flexrow">
 					<h4 class="message-sender">Gamemaster</h4>
 					<span class="message-metadata">
